Add formatting to Release Date column @frontend

--- a/Assignments/AssassinsCreedApp/AssassinsCreedApp/Views/Home/Index.cshtml
+++ b/Assignments/AssassinsCreedApp/AssassinsCreedApp/Views/Home/Index.cshtml
@@ -36,7 +36,7 @@
             @Html.DisplayFor(modelItem => item.Publisher.PublisherName)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.ReleaseDate)
+            @String.Format("{0:dd/MM/yyyy}", item.ReleaseDate)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.GameDescription)
